[package]
name = "pi_key_alloter"
version = "0.1.0"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "lock free Key(idx:u32, version:u32) alloter"
repository = "https://github.com/GaiaWorld/pi_key_alloter.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "lock free", "key", "alloter"]
readme = "README.md"


[features]
rc = []

[dependencies]
pi_null = "0.2"
pi_share = "0.4"
crossbeam = "0.8"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
